--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
     resource_class: large
     working_directory: ~/code
     docker:
-    - image: circleci/android:api-28-alpha
+    - image: circleci/android:api-28
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
