--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,8 +43,11 @@ jobs:
         name: Set firebase account
         command: sudo gcloud beta config set account firebase-adminsdk-ii296@testlab-4372f.iam.gserviceaccount.com
     - run:
+        name: Setup robo-script
+        command: echo ROBO_TEST | base64 --decode > ${HOME}/robo-script.json
+    - run:
         name: Starting robo test
-        command: sudo gcloud beta firebase test android run --type robo --app app/build/outputs/apk/debug/app-debug.apk --device model=Nexus9,version=25
+        command: sudo gcloud beta firebase test android run --type robo --app app/build/outputs/apk/debug/app-debug.apk --device model=Nexus9,version=25 --robo-script ${HOME}/robo-script.json
     - run:
         name: Run Signing Report
         command: ./gradlew signingReport
