--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,20 +34,20 @@ jobs:
         name: Decode firebase client-secret.json
         command: echo $GCLOUD_SERVICE_KEY | base64 --decode > ${HOME}/client-secret.json
     - run:
-        name: Set firebase project
-        command: sudo gcloud beta config set project testlab-4372f
-    - run:
         name: Auth firebase service account
         command: sudo gcloud beta auth activate-service-account firebase-adminsdk-ii296@testlab-4372f.iam.gserviceaccount.com --key-file ${HOME}/client-secret.json
     - run:
         name: Set firebase account
         command: sudo gcloud beta config set account firebase-adminsdk-ii296@testlab-4372f.iam.gserviceaccount.com
     - run:
+        name: Set firebase project
+        command: sudo gcloud beta config set project testlab-4372f
+    - run:
         name: Setup robo-script
         command: echo $ROBO_TEST | base64 --decode > ${HOME}/robo-script.json
     - run:
         name: Starting robo test
-        command: sudo gcloud beta firebase test android run --type robo --app app/build/outputs/apk/debug/app-debug.apk --device model=Nexus9,version=25 --robo-script ${HOME}/robo-script.json
+        command: sudo gcloud beta firebase test android run --type robo --app app/build/outputs/apk/debug/app-debug.apk --device model=Nexus9,version=25 model=Nexus6,version=25 --robo-script ${HOME}/robo-script.json
     - run:
         name: Run Signing Report
         command: ./gradlew signingReport
