--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,11 +43,14 @@ jobs:
         name: Set firebase project
         command: sudo gcloud beta config set project testlab-4372f
     - run:
-        name: Setup robo-script
+        name: Setup robo-script 1
         command: echo $ROBO_TEST | base64 --decode > ${HOME}/robo-script.json
     - run:
+        name: Setup robo-script 1
+        command: echo $ROBO_TEST | base64 --decode > ${HOME}/robo-script_second.json
+    - run:
         name: Starting robo test
-        command: sudo gcloud beta firebase test android run --type robo --app app/build/outputs/apk/debug/app-debug.apk --device model=Nexus9,version=25 --device model=Nexus6,version=25 --robo-script ${HOME}/robo-script.json --robo-script ${HOME}/robo-script.json
+        command: sudo gcloud beta firebase test android run --type robo --app app/build/outputs/apk/debug/app-debug.apk --device model=Nexus9,version=25 --device model=Nexus6,version=25 --robo-script ${HOME}/robo-script.json --robo-script ${HOME}/robo-script_second.json
     - run:
         name: Run Signing Report
         command: ./gradlew signingReport
