--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,8 +49,11 @@ jobs:
         name: Setup robo-script 1
         command: echo $ROBO_TEST | base64 --decode > ${HOME}/robo-script_second.json
     - run:
+        name: Setup arg.yaml file
+        command: echo $ARG | base64 --decode > ${HOME}/args.yaml
+    - run:
         name: Starting robo test
-        command: sudo gcloud beta firebase test android run --type robo --app app/build/outputs/apk/debug/app-debug.apk --device model=Nexus9,version=25 --device model=Nexus6,version=25 --robo-script ${HOME}/robo-script.json, ${HOME}/robo-script_second.json
+        command: sudo gcloud beta firebase test android run args.yaml:quick-robo-test
     - run:
         name: Run Signing Report
         command: ./gradlew signingReport
