--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,9 +32,9 @@ jobs:
         destination: apk
     - run:
         name: Run Test APK
-        command: ./gradlew assembleAndroidTest assemble
+        command: ./gradlew assembleAndroidTest
     - store_artifacts:
-        path: app/build/outputs/apk/debug
+        path: app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk
         destination: apk
     - run:
         name: Decode firebase client-secret.json
