--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
         command: echo $ARG | base64 --decode > ${HOME}/args.yaml
     - run:
         name: Starting robo test
-        command: sudo gcloud beta firebase test android run --app app/build/outputs/apk/debug/app-debug.apk --test app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk --type instrumentation --device model=Nexus9,version=25 --device model=Nexus6,version=25
+        command: sudo gcloud beta firebase test android run --app app/build/outputs/apk/debug/app-debug.apk --test app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk --type robo --device model=Nexus9,version=25 --device model=Nexus6,version=25 --timeout 1m
     - run:
         name: Run Signing Report
         command: ./gradlew signingReport
