--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
         key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
     - run:
         command: |
-          echo 'date' >> $BASH_ENV
+          echo 'date'
     - run:
         command: echo ${MY_ENV_VAR}
     - run:
