--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
         key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
     - run:
         command: |
-          DATE=`date +%s` |
+          DATE=`date +%s`
           echo ${DATE}
     - run:
         command: echo ${MY_ENV_VAR}
