--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           DATE=`date +%s`
           echo ${DATE}
           VARIABLE="Foo"
-          echo 'export Variable' >> $BASH_ENV
+          echo 'export ${Variable}' >> $BASH_ENV
     - run:
         command: echo ${Variable}
     - run:
