--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           DATE=`date +%s`
           echo ${DATE}
           MY_VARIABLE="Foo"
-          echo 'export MY_ENV="$DATE"' >> $BASH_ENV
+          echo 'export MY_ENV=`date +%s`' >> $BASH_ENV
     - run:
         command: echo ${MY_ENV}
     - run:
