--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
     - run:
         run:
         command: |
+          echo ${MY_ENV}
           echo 'export MY_ENV=`date +%s`' >> $BASH_ENV
     - run:
         command: echo ${MY_ENV}
