--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,10 @@ jobs:
         command: |
           echo 'export MY_ENV=`date +%s`' >> workspace/new-env-vars
     - run: cat workspace/new-env-vars >> $BASH_ENV
+    - persist_to_workspace:
+        root: workspace
+        paths:
+        - new-env-vars
     - run:
         command: echo ${MY_ENV}
     - run:
