--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
         - ~/.gradle
         key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
     - attach_workspace:
-        at: ~/code
+        at: /root/code
     - run:
         name:  Create directory
         command: mkdir -p workspace
@@ -39,9 +39,8 @@ jobs:
           echo 'export MY_ENV=`date +%s`' >> workspace/new-env-vars
     - run: cat workspace/new-env-vars >> $BASH_ENV
     - persist_to_workspace:
-        root: workspace
-        paths:
-        - new-env-vars
+        root: /root/code/workspace
+        paths: new-env-vars
     - run:
         command: echo ${MY_ENV}
     - run:
