--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,8 +64,8 @@ jobs:
         path: app/build/outputs/apk/androidTest/debug
         destination: apk
     - run:
-      name: Decode firebase client-secret.json
-      command: echo $GCLOUD_SERVICE_KEY | base64 --decode > ${HOME}/client-secret.json
+        name: Decode firebase client-secret.json
+        command: echo $GCLOUD_SERVICE_KEY | base64 --decode > ${HOME}/client-secret.json
     - run:
         name: Auth firebase service account
         command: sudo gcloud beta auth activate-service-account firebase-adminsdk-ii296@testlab-4372f.iam.gserviceaccount.com --key-file ${HOME}/client-secret.json
@@ -94,7 +94,7 @@ workflows:
   minutly:
     triggers: #use the triggers key to indicate a scheduled build
     - schedule:
-        cron: "* * * * 1-5" # use cron syntax to set the schedule
+        cron: "0 10-19 * * 1-5" # use cron syntax to set the schedule
         filters:
           branches:
             only:
