--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,46 @@ jobs:
         name: Post message to Circle.ci
         command: |
           export GIT_COMMIT_DESC=$(git log --format=oneline -n 1 | sed -E 's/^[^ ]+ (.*)$/\1/g')
-          echo "{\"channel\": \"random\", \"text\": \"Build number is: $(${CIRCLE_BUILD_NUM}+500), the URL: https://circleci.com/gh/barges/purpleocean-android/${CIRCLE_BUILD_NUM},\nCommit message: -${GIT_COMMIT_DESC}\", \"attachments\": [{ \"color\": \"#36a64f\", \"title\": \"PG-STAGING\", \"title_link\": \"https://${CIRCLE_BUILD_NUM}-47702162-gh.circle-artifacts.com/0/apk/app-pg_staging-release.apk\" }, { \"color\": \"#36a64f\", \"title\": \"PG-PROD\", \"title_link\": \"https://${CIRCLE_BUILD_NUM}-47702162-gh.circle-artifacts.com/0/apk/app-pg_production-release.apk\"}, {\"color\": \"#36a64f\", \"title\": \"PO-STAGING\",\"title_link\": \"https://${CIRCLE_BUILD_NUM}-47702162-gh.circle-artifacts.com/0/apk/app-staging-release.apk\"},{\"color\": \"#36a64f\",\"title\": \"PO-PROD\",\"title_link\": \"https://${CIRCLE_BUILD_NUM}-47702162-gh.circle-artifacts.com/0/apk/app-production-release.apk\"}]}" > ${HOME}/json_body.json
+          echo "{
+                \"channel\": \"random\",
+                \"attachments\": [
+                {
+                \"text\": \"Build number is: ${CIRCLE_BUILD_NUM}, the URL: https://circleci.com/gh/barges/purpleocean-android/${CIRCLE_BUILD_NUM},\nCommit message: ${GIT_COMMIT_DESC}\",
+                \"color\": \"#36a64f\",
+                \"attachment_type\": \"default\",
+                \"actions\": [
+                {
+                \"name\": \"PG_STAGING\",
+                \"type\": \"button\",
+                \"text\": \"PG_STAGING\",
+                \"style\": \"primary\",
+                \"url\": \"https://${CIRCLE_BUILD_NUM}-47702162-gh.circle-artifacts.com/0/apk/app-pg_staging-release.apk\"
+                },
+                {
+                \"name\": \"PG_PROD\",
+                \"type\": \"button\",
+                \"text\": \"PG_PROD\",
+                \"style\": \"primary\",
+                \"url\": \"https://${CIRCLE_BUILD_NUM}-47702162-gh.circle-artifacts.com/0/apk/app-pg_production-release.apk\"
+                },
+                {
+                \"name\": \"PO_STAGING\",
+                \"type\": \"button\",
+                \"text\": \"PO_STAGING\",
+                \"style\": \"primary\",
+                \"url\": \"https://${CIRCLE_BUILD_NUM}-47702162-gh.circle-artifacts.com/0/apk/app-staging-release.apk\"
+                },
+                {
+                \"name\": \"PO-PROD\",
+                \"type\": \"button\",
+                \"text\": \"PO-PROD\",
+                \"style\": \"primary\",
+                \"url\": \"https://${CIRCLE_BUILD_NUM}-47702162-gh.circle-artifacts.com/0/apk/app-production-release.apk\"
+                }
+                ]
+                }
+                ]
+                }" > ${HOME}/json_body.json
           curl --header "Content-Type: application/json" \
           --header "Authorization: Bearer $SLACK_TOKEN" \
           --request POST \
