--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
         command: |
           export GIT_COMMIT_DESC=$(git log --format=oneline -n 1 | sed -E 's/^[^ ]+ (.*)$/\1/g')
           export BUILD_NUMBER=$((${CIRCLE_BUILD_NUM}+500))
-          curl -X POST -H "header "Content-Type: application/json" -H "Authorization: Bearer $SLACK_TOKEN" \
+          curl -X POST -H "Content-Type: application/json" -H "Authorization: Bearer $SLACK_TOKEN" \
           --data "{\
                       \"channel\": \"random\",
                       \"attachments\": [ \
